--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+}
+.all-area{
     margin-left: 7%;
     margin-right: 7%;
 }
@@ -37,6 +40,11 @@ body {
     font-weight: 700;
     border-radius: 5px;
 }
+
+.section-tittle{
+    font-weight: bold;
+    font-size: 36px;
+}
 /* Comone style end */
 
 
@@ -58,10 +66,6 @@ body {
 }
 
 /* ======top section end */
-.section-tittle{
-    font-weight: bold;
-    font-size: 36px;
-}
 
 /* Mission area START */
 .mission-area-heading{
@@ -91,3 +95,18 @@ body {
     background-color: #FFF4D6;
 }
 /* Mission area END */
+
+
+/* Footer area START */
+.footer{
+    text-align: center;
+    padding: 15px;
+    background-color: black;
+    color: white;
+}
+.footer-heading{
+    font-family: 'Lobster Two', cursive;
+    font-size: 36px;
+}
+
+/* Footer area END */
